--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="shortcut icon" type="image/png" href="assets/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="/src/assets/favicon.png" />
 
         <section id="projects">
           <div class="container">
@@ -19,17 +19,9 @@
                       rel="noreferrer"
                       target="_blank"
                       class="cta-btn cta-btn--hero"
-                      href="../test1/index.html"
+                      href="#!"
                     >
                       Test 1
-                    </a>
-                                        <a
-                      rel="noreferrer"
-                      target="_blank"
-                      class="cta-btn cta-btn--hero"
-                      href="../test2/index.html"
-                    >
-                      Test 2
                     </a>
                   </div>
                 </div>
@@ -46,7 +38,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="styles.scss" />
+    <link rel="stylesheet" href="./src/styles.scss" />
     <script
       defer
       src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"
@@ -83,19 +75,8 @@
         <h2 class="section-title load-hidden">About me</h2>
         <div class="row about-wrapper">
           <div class="col-md-6 col-sm-12">
-            <div class="about-wrapper__image load-hidden">
-              <img
-                alt="Profile Image"
-                class="img-fluid rounded shadow-lg"
-                height="auto"
-                width="300px"
-                src="assets/profile.jpg"
-                alt="Profile Image"
-              />
-            </div>
           </div>
           <div class="col-md-6 col-sm-12">
-            <div class="about-wrapper__info load-hidden">
               <p class="about-wrapper__info-text">
                 This is where you can describe about yourself. The more you
                 describe about yourself, the more chances you have!
@@ -108,7 +89,7 @@
                   rel="noreferrer"
                   target="_blank"
                   class="cta-btn cta-btn--resume"
-                  href="assets/resume.pdf"
+                  href="./src/assets/resume.pdf"
                 >
                   View Resume
                 </a>
@@ -169,7 +150,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="./src/assets/project.jpg"
                     />
                   </div>
                 </a>
@@ -221,7 +202,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="./src/assets/project.jpg"
                     />
                   </div>
                 </a>
@@ -272,7 +253,7 @@
                     <img
                       alt="Project Image"
                       class="img-fluid"
-                      src="assets/project.jpg"
+                      src="./src/assets/project.jpg"
                     />
                   </div>
                 </a>
