correct file path.

--- a/index.html
+++ b/index.html
@@ -6,35 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/png" href="/src/assets/favicon.png" />
 
-        <section id="projects">
-          <div class="container">
-            <div class="project-wrapper">
-              <h2 class="section-title dark-blue-text">Projects</h2>
-    
-              <div class="row">
-                <div class="col-lg-4 col-sm-12">
-                  <div class="project-wrapper__text load-hidden">
-                    <h3 class="project-wrapper__text-title">Testing</h3>
-                    <a
-                      rel="noreferrer"
-                      target="_blank"
-                      class="cta-btn cta-btn--hero"
-                      href="./test1/index.html"
-                    >
-                      Test 1
-                    </a>
-                    <a
-                    rel="noreferrer"
-                    target="_blank"
-                    class="cta-btn cta-btn--hero"
-                    href="./test2/index.html"
-                  >
-                    Test 2
-                  </a>
-                  </div>
-                </div>
-              </div>
-
     <!-- Todo: put here your site title -->
     <title>[Your name here] | Developer</title>
     <!-- Todo: add some coding keywords below - e.g: (javascript, yourusername, etc) -->
@@ -46,7 +17,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="./src/styles.scss" />
+    <link rel="stylesheet" href="/src/styles.scss" />
     <script
       defer
       src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"
@@ -76,6 +47,35 @@
       </div>
     </section>
     <!-- /END Hero Section -->
+
+    <section id="projects">
+      <div class="container">
+        <div class="project-wrapper">
+          <h2 class="section-title dark-blue-text">Projects</h2>
+
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text load-hidden">
+                <h3 class="project-wrapper__text-title">Testing</h3>
+                <a
+                  rel="noreferrer"
+                  target="_blank"
+                  class="cta-btn cta-btn--hero"
+                  href="./test1/index.html"
+                >
+                  Test 1
+                </a>
+                <a
+                rel="noreferrer"
+                target="_blank"
+                class="cta-btn cta-btn--hero"
+                href="./test2/index.html"
+              >
+                Test 2
+              </a>
+              </div>
+            </div>
+          </div>
 
     <!-- **** About Section **** -->
     <section id="about">
