--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <section class="home bd-grid" id="home">
                 <div class="home__data">
                     <a href="/test2/index.html" class="button">Another Template</a>
-                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Taylor</span><br> Software Engineer</h1>
+                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Taylor.</span><br> Software Engineer</h1>
 
                     <a href="#" class="button">Contact</a>
                 </div>
