--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     </div>
                 <div class="home__data">
                     <a href="/test2/index.html" class="button">Another Template</a>
-                    <h1 class="home__title">Hi B,<br><span class="home__title-color">FWP</span><br></h1>
+                    <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Taylor.</span><br> Software Engineer</h1>
 
                     <a href="#" class="button">Contact</a>
                 </div>
