--- a/thenNotes/index.html
+++ b/thenNotes/index.html
@@ -27,23 +27,54 @@
                 <p>An atomic model of three fundamental forces and their interaction with four classifications of particles.</p>
                 <ol type="none"> <!-- Wrap with ordered list -->
                   <li>
+                    <!--1.1-->
                     <div class="media-body" style="display: flex;">
-                        <div style="flex: 0 0 auto; margin-right: 10px;">
+                      <div style="flex: 0 0 auto; margin-right: 10px;">
+                        <a href="./TheStandardModel/index.html">
                         <img src="media/StandardModel.png" class="media-object" style="width:45px">
                       </div>
                       <div style="flex: 1;">
-                        <h4 class="media-heading">Section 1.1: Particles<small><i>Posted on February 19, 2016</i></small></h4>
+                        <h4 class="media-heading">Section 1.1: Particles<small><i></i></small></h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                       </div>
                     </div>
                   </li>
                   <li>
+                    <ol type="none"> <!-- Wrap with ordered list -->
+                      <li>
+                        <!--1.1.1-->
+                        <div class="media-body" style="display: flex;">
+                          <div style="flex: 0 0 auto; margin-right: 10px;">
+                            <a href="./TheStandardModel/index.html">
+                            <img src="media/StandardModel.png" class="media-object" style="width:45px">
+                          </div>
+                          <div style="flex: 1;">
+                            <h4 class="media-heading">Section 1.1.1: Fermions<small><i></i></small></h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                          </div>
+                        </div>
+                        <!--1.1.2-->
+                        <div class="media-body" style="display: flex;">
+                          <div style="flex: 0 0 auto; margin-right: 10px;">
+                            <a href="./TheStandardModel/index.html">
+                            <img src="media/StandardModel.png" class="media-object" style="width:45px">
+                          </div>
+                          <div style="flex: 1;">
+                            <h4 class="media-heading">Section 1.1.2: Leptons<small><i></i></small></h4>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                          </div>
+                        </div>
+                      </li>
+                      <li>
+                    </ol>
+                    <!--1.2-->
                     <div class="media-body" style="display: flex;">
-                        <div style="flex: 0 0 auto; margin-right: 10px;">
+                      <div style="flex: 0 0 auto; margin-right: 10px;">
+                        <a href="./TheStandardModel/index.html">
                         <img src="media/StandardModel.png" class="media-object" style="width:45px">
                       </div>
                       <div style="flex: 1;">
-                        <h4 class="media-heading">Section 1.2: Forces<small><i>Posted on February 19, 2016</i></small></h4>
+                        <h4 class="media-heading">Section 1.2: Forces<small><i></i></small></h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                       </div>
                     </div>
@@ -56,6 +87,7 @@
             <div class="media-body" style="display: flex;">
               <!-- 2.0 -->
               <div style="flex: 0 0 auto; margin-right: 10px;">
+                <a href="./TheStandardModel/index.html">
                 <img src="media/StandardModel.png" class="media-object" style="width:45px">
               </div>
               <div style="flex: 1;">
@@ -63,12 +95,14 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                 <ol type="none"> <!-- Wrap with ordered list -->
                   <li>
+                    <!--2.1-->
                     <div class="media">
-                        <div style="flex: 0 0 auto; margin-right: 10px;">
+                      <div style="flex: 0 0 auto; margin-right: 10px;">
+                        <a href="./TheStandardModel/index.html">
                         <img src="media/StandardModel.png" class="media-object" style="width:45px">
                       </div>
                       <div style="flex: 1;">
-                        <h4 class="media-heading">Section 2.1: Subsection <small><i>Posted on February 19,</i></small></h4>
+                        <h4 class="media-heading">Section 2.1: Subsection <small><i></i></small></h4>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                       </div>
                     </div>
