--- a/thenNotes/index.html
+++ b/thenNotes/index.html
@@ -53,6 +53,33 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
                           </div>
                         </div>
+                        <ol type="none"> <!-- Wrap with ordered list -->
+                          <li>
+                            <!--1.1.1.1-->
+                            <div class="media-body" style="display: flex;">
+                              <div style="flex: 0 0 auto; margin-right: 10px;">
+                                <a href="./TheStandardModel/quarks.html">
+                                <img src="media/StandardModel.png" class="media-object" style="width:45px">
+                              </div>
+                              <div style="flex: 1;">
+                                <h4 class="media-heading">Section 1.1.1.1: Quarks<small><i></i></small></h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                              </div>
+                            </div>
+                          </li>
+                          <li>
+                            <!--1.1.1.1-->
+                            <div class="media-body" style="display: flex;">
+                              <div style="flex: 0 0 auto; margin-right: 10px;">
+                                <a href="./TheStandardModel/quarks.html">
+                                <img src="media/StandardModel.png" class="media-object" style="width:45px">
+                              </div>
+                              <div style="flex: 1;">
+                                <h4 class="media-heading">Section 1.1.1.1: Leptons<small><i></i></small></h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                              </div>
+                            </div>
+                          </li>
                         <!--1.1.2-->
                         <div class="media-body" style="display: flex;">
                           <div style="flex: 0 0 auto; margin-right: 10px;">
