--- a/thenNotes/TheStandardModel/quarks.html
+++ b/thenNotes/TheStandardModel/quarks.html
@@ -18,8 +18,8 @@
             <div class="media-body" style="display: flex;">
               <!-- 1.0 -->
               <div style="flex: 0 0 auto; margin-right: 10px;">
-                <a href="../TheStandardModel/index.html">
-                <img src="../media/StandardModel.png" class="media-object" style="width:45px">
+                <a href="../TheStandardModel/the_standard_model.html">
+                <img src="../media/TheStandardModel.png" class="media-object" style="width:45px">
                 </a>
               </div>
               <div style="flex: 1;">
@@ -30,8 +30,8 @@
                     <!--1.1-->
                     <div class="media-body" style="display: flex;">
                       <div style="flex: 0 0 auto; margin-right: 10px;">
-                        <a href="../TheStandardModel/index.html">
-                        <img src="../media/StandardModel.png" class="media-object" style="width:45px">
+                        <a href="../TheStandardModel/the_standard_model.html">
+                        <img src="../media/TheStandardModel.png" class="media-object" style="width:45px">
                       </div>
                       <div style="flex: 1;">
                         <h4 class="media-heading">Up Quark<small><i></i></small></h4>
@@ -43,8 +43,8 @@
                     <!--1.2-->
                     <div class="media-body" style="display: flex;">
                       <div style="flex: 0 0 auto; margin-right: 10px;">
-                        <a href="../TheStandardModel/index.html">
-                        <img src="../media/StandardModel.png" class="media-object" style="width:45px">
+                        <a href="../TheStandardModel/the_standard_model.html">
+                        <img src="../media/TheStandardModel.png" class="media-object" style="width:45px">
                       </div>
                       <div style="flex: 1;">
                         <h4 class="media-heading">Down Quark<small><i></i></small></h4>
@@ -56,8 +56,8 @@
                     <!--1.3-->
                     <div class="media-body" style="display: flex;">
                       <div style="flex: 0 0 auto; margin-right: 10px;">
-                        <a href="../TheStandardModel/index.html">
-                        <img src="../media/StandardModel.png" class="media-object" style="width:45px">
+                        <a href="../TheStandardModel/the_standard_model.html">
+                        <img src="../media/TheStandardModel.png" class="media-object" style="width:45px">
                       </div>
                       <div style="flex: 1;">
                         <h4 class="media-heading">Charm Quark<small><i></i></small></h4>
@@ -69,8 +69,8 @@
                     <!--1.4-->
                     <div class="media-body" style="display: flex;">
                       <div style="flex: 0 0 auto; margin-right: 10px;">
-                        <a href="../TheStandardModel/index.html">
-                        <img src="../media/StandardModel.png" class="media-object" style="width:45px">
+                        <a href="../TheStandardModel/the_standard_model.html">
+                        <img src="../media/TheStandardModel.png" class="media-object" style="width:45px">
                       </div>
                       <div style="flex: 1;">
                         <h4 class="media-heading">Strange Quark<small><i></i></small></h4>
@@ -81,8 +81,8 @@
                     <!--1.5-->
                     <div class="media-body" style="display: flex;">
                       <div style="flex: 0 0 auto; margin-right: 10px;">
-                        <a href="../TheStandardModel/index.html">
-                        <img src="../media/StandardModel.png" class="media-object" style="width:45px">
+                        <a href="../TheStandardModel/the_standard_model.html">
+                        <img src="../media/TheStandardModel.png" class="media-object" style="width:45px">
                       </div>
                       <div style="flex: 1;">
                         <h4 class="media-heading">Top Quark<small><i></i></small></h4>
@@ -95,8 +95,8 @@
                     <!--1.6-->
                     <div class="media-body" style="display: flex;">
                       <div style="flex: 0 0 auto; margin-right: 10px;">
-                        <a href="../TheStandardModel/index.html">
-                        <img src="../media/StandardModel.png" class="media-object" style="width:45px">
+                        <a href="../TheStandardModel/the_standard_model.html">
+                        <img src="../media/TheStandardModel.png" class="media-object" style="width:45px">
                       </div>
                       <div style="flex: 1;">
                         <h4 class="media-heading">Bottom Quark<small><i></i></small></h4>
@@ -107,8 +107,8 @@
                     <!--1.7-->
                     <div class="media-body" style="display: flex;">
                       <div style="flex: 0 0 auto; margin-right: 10px;">
-                        <a href="../TheStandardModel/index.html">
-                        <img src="../media/StandardModel.png" class="media-object" style="width:45px">
+                        <a href="../TheStandardModel/the_standard_model.html">
+                        <img src="../media/TheStandardModel.png" class="media-object" style="width:45px">
                       </div>
                       <div style="flex: 1;">
                         <h4 class="media-heading">Anti-Quark<small><i></i></small></h4>
@@ -120,8 +120,8 @@
                     <!--1.8-->
                     <div class="media-body" style="display: flex;">
                       <div style="flex: 0 0 auto; margin-right: 10px;">
-                        <a href="../TheStandardModel/index.html">
-                        <img src="../media/StandardModel.png" class="media-object" style="width:45px">
+                        <a href="../TheStandardModel/the_standard_model.html">
+                        <img src="../media/TheStandardModel.png" class="media-object" style="width:45px">
                       </div>
                       <div style="flex: 1;">
                         <h4 class="media-heading">Mesons<small><i></i></small></h4>
