--- a/thenNotes/index.html
+++ b/thenNotes/index.html
@@ -18,8 +18,8 @@
             <div class="media-body" style="display: flex;">
               <!-- 1.0 -->
               <div style="flex: 0 0 auto; margin-right: 10px;">
-                <a href="./TheStandardModel/index.html">
-                <img src="media/StandardModel.png" class="media-object" style="width:45px">
+                <a href="./TheStandardModel/the_standard_model.html">
+                <img src="media/TheStandardModel.png" class="media-object" style="width:45px">
                 </a>
               </div>
               <div style="flex: 1;">
@@ -30,8 +30,8 @@
                     <!--1.1-->
                     <div class="media-body" style="display: flex;">
                       <div style="flex: 0 0 auto; margin-right: 10px;">
-                        <a href="./TheStandardModel/index.html">
-                        <img src="media/StandardModel.png" class="media-object" style="width:45px">
+                        <a href="./TheStandardModel/the_standard_model.html">
+                        <img src="media/TheStandardModel.png" class="media-object" style="width:45px">
                       </div>
                       <div style="flex: 1;">
                         <h4 class="media-heading">Section 1.1: Particles<small><i></i></small></h4>
@@ -45,8 +45,8 @@
                         <!--1.1.1-->
                         <div class="media-body" style="display: flex;">
                           <div style="flex: 0 0 auto; margin-right: 10px;">
-                            <a href="./TheStandardModel/index.html">
-                            <img src="media/StandardModel.png" class="media-object" style="width:45px">
+                            <a href="./TheStandardModel/the_standard_model.html">
+                            <img src="media/TheStandardModel.png" class="media-object" style="width:45px">
                           </div>
                           <div style="flex: 1;">
                             <h4 class="media-heading">Section 1.1.1: Fermions<small><i></i></small></h4>
@@ -59,7 +59,7 @@
                             <div class="media-body" style="display: flex;">
                               <div style="flex: 0 0 auto; margin-right: 10px;">
                                 <a href="./TheStandardModel/quarks.html">
-                                <img src="media/StandardModel.png" class="media-object" style="width:45px">
+                                <img src="media/TheStandardModel.png" class="media-object" style="width:45px">
                               </div>
                               <div style="flex: 1;">
                                 <h4 class="media-heading">Section 1.1.1.1: Quarks<small><i></i></small></h4>
@@ -72,7 +72,7 @@
                             <div class="media-body" style="display: flex;">
                               <div style="flex: 0 0 auto; margin-right: 10px;">
                                 <a href="./TheStandardModel/quarks.html">
-                                <img src="media/StandardModel.png" class="media-object" style="width:45px">
+                                <img src="media/TheStandardModel.png" class="media-object" style="width:45px">
                               </div>
                               <div style="flex: 1;">
                                 <h4 class="media-heading">Section 1.1.1.1: Leptons<small><i></i></small></h4>
@@ -83,8 +83,8 @@
                         <!--1.1.2-->
                         <div class="media-body" style="display: flex;">
                           <div style="flex: 0 0 auto; margin-right: 10px;">
-                            <a href="./TheStandardModel/index.html">
-                            <img src="media/StandardModel.png" class="media-object" style="width:45px">
+                            <a href="./TheStandardModel/the_standard_model.html">
+                            <img src="media/TheStandardModel.png" class="media-object" style="width:45px">
                           </div>
                           <div style="flex: 1;">
                             <h4 class="media-heading">Section 1.1.2: Leptons<small><i></i></small></h4>
@@ -97,8 +97,8 @@
                     <!--1.2-->
                     <div class="media-body" style="display: flex;">
                       <div style="flex: 0 0 auto; margin-right: 10px;">
-                        <a href="./TheStandardModel/index.html">
-                        <img src="media/StandardModel.png" class="media-object" style="width:45px">
+                        <a href="./TheStandardModel/the_standard_model.html">
+                        <img src="media/TheStandardModel.png" class="media-object" style="width:45px">
                       </div>
                       <div style="flex: 1;">
                         <h4 class="media-heading">Section 1.2: Forces<small><i></i></small></h4>
@@ -114,8 +114,8 @@
             <div class="media-body" style="display: flex;">
               <!-- 2.0 -->
               <div style="flex: 0 0 auto; margin-right: 10px;">
-                <a href="./TheStandardModel/index.html">
-                <img src="media/StandardModel.png" class="media-object" style="width:45px">
+                <a href="./TheStandardModel/the_standard_model.html">
+                <img src="media/TheStandardModel.png" class="media-object" style="width:45px">
               </div>
               <div style="flex: 1;">
                 <h4 class="media-heading">Chapter 2: Another Chapter <small><i></i></small></h4>
@@ -125,8 +125,8 @@
                     <!--2.1-->
                     <div class="media">
                       <div style="flex: 0 0 auto; margin-right: 10px;">
-                        <a href="./TheStandardModel/index.html">
-                        <img src="media/StandardModel.png" class="media-object" style="width:45px">
+                        <a href="./TheStandardModel/the_standard_model.html">
+                        <img src="media/TheStandardModel.png" class="media-object" style="width:45px">
                       </div>
                       <div style="flex: 1;">
                         <h4 class="media-heading">Section 2.1: Subsection <small><i></i></small></h4>
