--- a/thenJokes/index.html
+++ b/thenJokes/index.html
@@ -94,6 +94,7 @@
 <body>
     <div class="container">
         <h1 class="text-center mb-5">Random Jokes Generator</h1>
+        <p class="text-center mb-5">These randomly generated jokes should not be assumed to be politically correct.</p>
         <div class="text-center">
             <button class="btn btn-primary" onclick="getJoke()"><i class="fas fa-sync-alt"></i> Get Another Joke</button>
         </div>
