--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <br>
                     <a href="/thenLCARS/index.html" class="button">then LCARS;</a>
                     <br>
-                    <a href="/thenJokes/index.html" class="button">then Jokes;</a>
+                    <a href="#" class="button">then Jokes;</a>
                     <h1 class="home__title">&#125</h1>
                 </div>
             </section>
